# sugatan_yotpo

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  legacy.py  main.py  pyproject.toml  test.json
.github/workflows/: main.yaml
test/: test_units.py
